@@ -2,6 +2,8 @@ Revision history for Perl extension Otogiri-Plugin-TableInfo
 
 {{$NEXT}}
 
+    - new feature show_creaate_table() (alias to desc)
+
 0.01 2014-05-11T03:30:54Z
 
     - original version
